# batch-ecdsa-p256

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json
circuits/: batch_ecdsa.circom  ecdsa.circom
scripts/: ecdsa_sig_batch_sample.json  generateSampleSignature.ts  sig_ecdsa_batch_sample.json
src/: main.rs
src/data/: batch.json
