[package]
name = "batch-ecdsa-p256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.13.0", features = ["derive"] }
nova-scotia = "0.5.0"
nova-snark = "0.35.0"
serde = "1.0.197"
serde_json = "1.0.114"
